--- a/springprojet/src/main/resources/application.properties
+++ b/springprojet/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/projetspring?createDatabaseIfN
 spring.datasource.username=root
 spring.datasource.password=
 server.port=8084
-
+spring.security.user.name=malekgomri@hotmail.com
+spring.security.user.password=melek123
 
 
 
