--- a/springprojet/src/main/resources/application.properties
+++ b/springprojet/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/projetspring?createDatabaseIfN
 spring.datasource.username=root
 spring.datasource.password=
 server.port=8084
-spring.mail.host=smtp@gmail.com
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=malekgomri881@gmail.com
 spring.mail.password=gfzq ckyz pqzx jhls
